--- a/po/wesnoth/gd.po
+++ b/po/wesnoth/gd.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 15:56+0200\n"
-"PO-Revision-Date: 2012-11-10 16:27-0000\n"
-"Last-Translator: GunChleoc <fiosAIGforamnagaidhligDOTnet>\n"
+"PO-Revision-Date: 2012-11-14 20:20+0100\n"
+"Last-Translator: GunChleoc <fios@foramnagaidhlig.net>\n"
 "Language-Team: Fòram na Gàidhlig http://www.foramnagaidhlig.net\n"
 "Language: gd\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 || n==11) ? 0 : (n==2 || n==12) ? 1 : "
 "(n > 2 && n < 20) ? 2 : 3;\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Virtaal 0.7.1\n"
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:4
@@ -2956,11 +2956,11 @@ msgid ""
 "benefits of advancing a level, so it is generally wiser to advance your "
 "lower-level units instead."
 msgstr ""
-"An àite rang ùr a bhuain, gheibh aonadan àrda duais <i>An dèidh an "
-"àrdachaidh as àirde</i> (ADÀÀ) a mheudaicheas na puingean-beatha as motha "
-"aig an aonad le trì is a shlànaicheas e gu lèir. Tha seo mòran nas lugha na "
-"na duaisean a gheibh aonad le àrdachadh gu rang ùr. Mar sin, tha e nas glice "
-"na h-aonadan ìosal agad àrdachadh na àite."
+"An àite rang ùr a bhuain, gheibh aonadan àrda duais <i>Àrdachadh an dèidh an "
+"rang as àirde</i> (ÀDRÀ) a mheudaicheas na puingean-beatha as motha aig an "
+"aonad le trì is a shlànaicheas e gu lèir. Tha seo mòran nas lugha na na "
+"duaisean a gheibh aonad le àrdachadh gu rang ùr. Mar sin, tha e nas glice na "
+"h-aonadan ìosal agad àrdachadh na àite."
 
 #. [tip]
 #: data/hardwired/tips.cfg:180
@@ -3182,13 +3182,13 @@ msgstr "maille air"
 #. [lua]: set_status
 #: data/lua/wml-tags.lua:1268 src/actions/attack.cpp:812
 msgid "female^petrified"
-msgstr "reòite"
+msgstr "na clach"
 
 #. #-#-#-#-#  wesnoth.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [lua]: set_status
 #: data/lua/wml-tags.lua:1268 src/actions/attack.cpp:812
 msgid "petrified"
-msgstr "reòite"
+msgstr "na chlach"
 
 #. [lua]: set_status
 #: data/lua/wml-tags.lua:1269
@@ -6525,12 +6525,13 @@ msgstr ""
 
 #: src/reports.cpp:316
 msgid "petrified: "
-msgstr "reòite: "
+msgstr "na clach: "
 
 #: src/reports.cpp:317
 msgid "This unit has been petrified. It may not move or attack."
 msgstr ""
-"Tha an t-aonad seo reòite. Chan urrainn dha gluasad no ionnsaigh a thoirt."
+"Chaidh an t-aonad seo a thionndadh gu cloich. Chan urrainn dha gluasad no "
+"ionnsaigh a thoirt."
 
 #: src/reports.cpp:340
 msgid "Alignment: "
