--- a/po/wesnoth/ru.po
+++ b/po/wesnoth/ru.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: wesnoth.po\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 15:56+0200\n"
-"PO-Revision-Date: 2012-04-07 04:48+0400\n"
+"PO-Revision-Date: 2012-11-16 15:42+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: ru\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Emacs 24.0.94.1, po-mode 2.2+0.4\n"
+"X-Generator: Emacs 24.2.1, po-mode 2.2+0.4\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-Language: Russian\n"
 "X-Poedit-Country: RUSSIAN FEDERATION\n"
@@ -545,10 +545,8 @@ msgstr "Русский перевод"
 
 #. [about]
 #: data/core/about.cfg:2599
-#, fuzzy
-#| msgid "Galician Translation"
 msgid "Scottish Gaelic Translation"
-msgstr "Галисийский перевод"
+msgstr "Гаэльский перевод"
 
 #. [about]
 #: data/core/about.cfg:2608
@@ -6549,7 +6547,7 @@ msgstr "и"
 
 #: src/serialization/string_utils.cpp:321
 msgid "prefix_kibi^K"
-msgstr ""
+msgstr "Ки"
 
 #: src/serialization/string_utils.cpp:322
 msgid "prefix_kilo^k"
@@ -6585,7 +6583,7 @@ msgstr "Й"
 
 #: src/serialization/string_utils.cpp:344
 msgid "infix_binary^i"
-msgstr ""
+msgstr "и"
 
 #: src/statistics_dialog.cpp:118 src/statistics_dialog.cpp:235
 msgid "Recruits"
@@ -6935,76 +6933,6 @@ msgstr "Настройки планировщика"
 #~ "Юшуа,Юсри,Юсуф,Зафар,Зафир,Захид,Захир,Зайд,Заим,Зайн,Зариф,Закаррия,Заки,"
 #~ "Закван,Зияд,Зубайр,Зухайр"
 
-#, fuzzy
-#~| msgid "invisible: "
-#~ msgid "invisible"
-#~ msgstr "невидимый: "
-
-#, fuzzy
-#~| msgid "female^slowed"
-#~ msgid "female^invisible"
-#~ msgstr "замедлена"
-
-#, fuzzy
-#~| msgid "Fire a game event."
-#~ msgid "I triggered a moveto event."
-#~ msgstr "Запустить событие игры."
-
-#, fuzzy
-#~| msgid "Password: "
-#~ msgid "sword"
-#~ msgstr "Пароль: "
-
-#, fuzzy
-#~| msgid "Version: "
-#~ msgid "Vision Test"
-#~ msgstr "Версия: "
-
-#, fuzzy
-#~| msgid "invisible: "
-#~ msgid "It is invisible!"
-#~ msgstr "невидимый: "
-
-#, fuzzy
-#~| msgid "Choose weapon:"
-#~ msgid "Choose a Map to Open"
-#~ msgstr "Выберите оружие:"
-
-#, fuzzy
-#~| msgid "Choose the game to load"
-#~ msgid "Choose a Mask to Apply"
-#~ msgstr "Которую игру загрузить?"
-
-#, fuzzy
-#~| msgid "Choose weapon:"
-#~ msgid "Choose Target Map"
-#~ msgstr "Выберите оружие:"
-
-#, fuzzy
-#~| msgid "The map already exists. Do you want to overwrite it?"
-#~ msgid "The file already exists. Do you want to overwrite it?"
-#~ msgstr "Карта уже существует. Перезаписать ее?"
-
-#, fuzzy
-#~| msgid "No era information found."
-#~ msgid "No random map generators found."
-#~ msgstr "Информация об эрах не найдена."
-
-#, fuzzy
-#~| msgid "Installation failed"
-#~ msgid "Map creation failed."
-#~ msgstr "Установка не удалась"
-
-#, fuzzy
-#~| msgid "The map is invalid."
-#~ msgid "This map is already open."
-#~ msgstr "Карта повреждена."
-
-#, fuzzy
-#~| msgid "Next Side"
-#~ msgid "(New Side)"
-#~ msgstr "Следующая сторона"
-
 #~ msgid "The server responded with an error: \"$error|\""
 #~ msgstr "Сервер ответил ошибкой: «$error|»"
 
@@ -7091,6 +7019,9 @@ msgstr "Настройки планировщика"
 
 #~ msgid "Choose the add-on to download."
 #~ msgstr "Выберите аддон для загрузки."
+
+#~ msgid "Choose the game to load"
+#~ msgstr "Которую игру загрузить?"
 
 #~ msgid "Do you really want to start the server?"
 #~ msgstr "Вы действительно хотите запустить сервер?"
