--- a/po/wesnoth-lib/it.po
+++ b/po/wesnoth-lib/it.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:26+0300\n"
-"PO-Revision-Date: 2018-09-09 17:05+0200\n"
+"PO-Revision-Date: 2018-10-05 01:01-0700\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #. [terrain_type]: id=farmer-fence  # AI-animal-proof fences from first scenario
 #. [terrain_type]: id=fence
@@ -1662,6 +1662,15 @@ msgstr "Sabbia"
 
 #. [terrain_type]: id=reef
 #: data/core/terrain.cfg:2824
+#, fuzzy
+#| msgid ""
+#| "<italic>text='Coastal reefs'</italic> are shallows formed by stone, coral "
+#| "and sand.\n"
+#| "This provides most land units with a more steady footing and defensive "
+#| "positions than wading in shallow water normally would and also grants "
+#| "most water-dwelling races an exceptionally high defense.\n"
+#| "\n"
+#| "Merfolk and Naga both receive 70% defense on coastal reefs."
 msgid ""
 "<italic>text='Coastal reefs'</italic> are shallows formed by stone, coral "
 "and sand.\n"
@@ -1707,6 +1716,17 @@ msgstr ""
 
 #. [terrain_type]: id=swamp_water
 #: data/core/terrain.cfg:2853
+#, fuzzy
+#| msgid ""
+#| "<italic>text='Swamps'</italic> represent any sort of wetlands.\n"
+#| "Swamps slow down nearly everyone, and inhibit their ability to defend "
+#| "themselves. An exception to this is any race bodily skilled in navigating "
+#| "water; these receive both full movement and a defensive bonus. Those that "
+#| "make their living in the wetlands are also adept at using this terrain "
+#| "for cover.\n"
+#| "\n"
+#| "Most units make do with 30% defense in swamps. Merfolk, naga, and "
+#| "saurians all generally enjoy 60%."
 msgid ""
 "<italic>text='Swamps'</italic> represent any sort of wetlands.\n"
 "Swamps slow down nearly everyone, and inhibit their ability to defend "
@@ -1732,6 +1752,18 @@ msgstr ""
 
 #. [terrain_type]: id=shallow_water
 #: data/core/terrain.cfg:2866
+#, fuzzy
+#| msgid ""
+#| "<italic>text='Shallow water'</italic> represents any body of water deep "
+#| "enough to come up to roughly a man’s waist. This is enough to slow down "
+#| "nearly anyone and leave them wide open to attack. Dwarves, given that the "
+#| "water reaches up almost to their heads, have an extremely hard time of "
+#| "this. The exception is any race whose bodies naturally lend themselves to "
+#| "swimming, for which they receive a considerable defensive bonus and full "
+#| "movement.\n"
+#| "\n"
+#| "Most units make do with 20 to 30% defense in shallow water, whereas both "
+#| "naga and merfolk enjoy 60%."
 msgid ""
 "<italic>text='Shallow water'</italic> represents any body of water deep "
 "enough to come up to roughly a man’s waist. This is enough to slow down "
@@ -1807,6 +1839,15 @@ msgstr ""
 
 #. [terrain_type]: id=deep_water
 #: data/core/terrain.cfg:2907
+#, fuzzy
+#| msgid ""
+#| "<italic>text='Deep water'</italic> represents any body of water deep "
+#| "enough to cover a man’s head.\n"
+#| "Most units cannot enter deep water: it is the domain of units which can "
+#| "either fly, or are exceptionally strong swimmers.\n"
+#| "\n"
+#| "Merfolk and naga both receive 50% defense in deep water, with full "
+#| "movement."
 msgid ""
 "<italic>text='Deep water'</italic> represents any body of water deep enough "
 "to cover a man’s head.\n"
@@ -2387,7 +2428,7 @@ msgstr "xBRZ seguito da Nearest Neighbor (raccomandato)"
 
 #: data/gui/window/advanced_graphics_options.cfg:45
 msgid "Bilinear interpolation scaling"
-msgstr "interpolazione Bilineare scaling"
+msgstr "Ridimensionamento con Interpolazione Bilineare"
 
 #: data/gui/window/advanced_graphics_options.cfg:45
 msgid "Linear"
@@ -5416,8 +5457,10 @@ msgid "operating_system^<unknown>"
 msgstr "<sconosciuto>"
 
 #: src/font/text.cpp:789
+#, fuzzy
+#| msgid "The text contains invalid Pango markup: "
 msgid "The text contains invalid markup: "
-msgstr "Il testo contiene markup non valido: "
+msgstr "Il testo contiene markup Pango non valido: "
 
 #. TRANSLATORS: Formats a two-element conjunctive list.
 #: src/formula/string_utils.cpp:251
@@ -5611,12 +5654,16 @@ msgid "addons_order^Type ($order)"
 msgstr "Tipo ($order)"
 
 #: src/gui/dialogs/addon/manager.cpp:228
+#, fuzzy
+#| msgid "addons_order^Last updated ($datelike_order)"
 msgid "addons_order^Last updated ($order)"
-msgstr "Ultimo aggiornamento ($order)"
+msgstr "Ultimo aggiornamento ($datelike_order)"
 
 #: src/gui/dialogs/addon/manager.cpp:231
+#, fuzzy
+#| msgid "addons_order^First uploaded ($datelike_order)"
 msgid "addons_order^First uploaded ($order)"
-msgstr "Prima pubblicazione ($order)"
+msgstr "Prima pubblicazione ($datelike_order)"
 
 #: src/gui/dialogs/addon/manager.cpp:260 src/gui/widgets/addon_list.cpp:103
 msgid "addon_state^Not installed"
@@ -6181,12 +6228,16 @@ msgid "Use map settings:"
 msgstr "Usa impostazioni della mappa:"
 
 #: src/gui/dialogs/multiplayer/lobby.cpp:486
+#, fuzzy
+#| msgid ""
+#| "One or more add-ons need to be installed\n"
+#| "in order to join this game."
 msgid ""
 "One or more items need to be installed\n"
 "in order to join this game."
 msgstr ""
 "Per poter entrare in questa partita\n"
-"uno o più elementi devono essere istallati."
+"uno o più estensioni devono essere istallate."
 
 #: src/gui/dialogs/multiplayer/lobby.cpp:511
 msgid "Observers allowed"
@@ -6504,15 +6555,19 @@ msgstr "Elimina estensione dal server"
 
 #: src/gui/widgets/chatbox.cpp:263
 msgid "whisper to $receiver"
-msgstr "Bisbiglia a $receiver"
+msgstr "bisbiglia a $receiver"
 
 #: src/gui/widgets/chatbox.cpp:396
+#, fuzzy
+#| msgid ""
+#| "Whisper session with <i>“$name”</i> started. If you do not want to "
+#| "receive messages from this user, type <i>/ignore $name</i>"
 msgid ""
 "Whisper session with <i>“$name”</i> started. If you do not want to receive "
 "messages from this user, type <i>/ignore $name</i>\n"
 msgstr ""
 "Iniziata una sessione bisbigliata con <i>“$name”</i>. Se non vuoi ricevere "
-"messaggi da questo utente, scrivi <i>/ignore $name</i>\n"
+"messaggi da questo utente, scrivi <i>/ignore $name</i>"
 
 #: src/gui/widgets/chatbox.cpp:400
 msgid "Room <i>“$name”</i> joined"
@@ -7614,6 +7669,17 @@ msgstr ""
 #~ msgid "Sign Up"
 #~ msgstr "Iscrizione"
 
+#~ msgid "Acceleration factor:"
+#~ msgstr "Fattore di Accelerazione:"
+
+#~ msgid ""
+#~ "Speed at which unit moves and animations play when ‘Accelerated speed’ is "
+#~ "enabled or when Shift is held down in-game"
+#~ msgstr ""
+#~ "Velocità alla quale si muovono le unità e le animazioni quando viene "
+#~ "abilitato la ‘Velocità accelerata’ o quando viene premuto il tasto "
+#~ "Maiuscolo durante una partita"
+
 #~ msgid "Available at main menu"
 #~ msgstr "Disponibile nella schermata principale"
 
@@ -7627,11 +7693,41 @@ msgstr ""
 #~ "Disabilitarlo permetterà di utilizzare la CPU al 100%, ma potrebbe "
 #~ "rallentare le prestazioni se utilizzato con risoluzioni alte"
 
+#~ msgid "Rename"
+#~ msgstr "Rinomina"
+
 #~ msgid "The maximum text width is less than 1."
 #~ msgstr "L’ampiezza massima del testo è meno di 1."
 
+#~| msgid "sort^Ascending"
+#~ msgid "ascending"
+#~ msgstr "ascendente"
+
+#~ msgid "oldest to newest"
+#~ msgstr "dal più vecchio al più nuovo"
+
+#~| msgid "sort^Descending"
+#~ msgid "descending"
+#~ msgstr "discendente"
+
+#~ msgid "newest to oldest"
+#~ msgstr "dal più nuovo al più vecchio"
+
 #~ msgid "active_modifications^None"
 #~ msgstr "Nessuna"
+
+#~| msgid "Modifications:"
+#~ msgid "Modifications: "
+#~ msgstr "Modifiche: "
+
+#~ msgid "The lua console can only be used in debug mode! (Run ':debug' first)"
+#~ msgstr ""
+#~ "La console lua può essere utilizzata soltanto in modalità debug! (esegui "
+#~ "prima ':debug')"
+
+#~| msgid "Lua Console"
+#~ msgid "lua console"
+#~ msgstr "console Lua"
 
 #~ msgid "$game_name (Era: $era_name)"
 #~ msgstr "$game_name (Era: $era_name)"
@@ -7642,8 +7738,16 @@ msgstr ""
 #~ msgid "Era"
 #~ msgstr "Era"
 
+#~| msgid "Lobby"
+#~ msgid "lobby"
+#~ msgstr "lobby"
+
 #~ msgid "number of players^$min to $max"
 #~ msgstr "$min a $max"
+
+#~| msgid "Quit game"
+#~ msgid "this game"
+#~ msgstr "questa partita"
 
 #~ msgid ""
 #~ "Unsupported image format.\n"
@@ -7653,6 +7757,16 @@ msgstr ""
 #~ "Immagine di formato non supportato.\n"
 #~ "\n"
 #~ "Prova a salvare la schermata come PNG."
+
+#~| msgid "Scenarios"
+#~ msgid "All Scenarios"
+#~ msgstr "Tutti gli scenari"
+
+#~ msgid "$count|× $name"
+#~ msgstr "$count|× $name"
+
+#~ msgid "Touch"
+#~ msgstr "Tocca"
 
 #~ msgid "Quit to Main Menu"
 #~ msgstr "Esci alla schermata iniziale"
@@ -7844,12 +7958,6 @@ msgstr ""
 
 #~ msgid "sort^By first upload"
 #~ msgstr "Per primo invio"
-
-#~ msgid "sort^Ascending"
-#~ msgstr "Ascendente"
-
-#~ msgid "sort^Descending"
-#~ msgstr "Discendente"
 
 #~ msgid "Filter:"
 #~ msgstr "Filtro:"
