--- a/po/wesnoth-sota/it.po
+++ b/po/wesnoth-sota/it.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2018-09-09 18:11+0200\n"
+"PO-Revision-Date: 2018-10-05 00:51-0700\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: \n"
 "Language: it\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #. [campaign]: id=Secrets of the Ancients
 #. [editor_group]: id=sota
@@ -1673,8 +1673,10 @@ msgstr "Cattura tutti i villaggi"
 
 #. [unit]: type=Shadow
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/08_Carcyn.cfg:92
+#, fuzzy
+#| msgid "Vash-Gorn"
 msgid "Vash Gorn"
-msgstr "Vash Gorn"
+msgstr "Vash-Gorn"
 
 #. [unit]: type=Mage, id=Wynran
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/08_Carcyn.cfg:114
@@ -3085,12 +3087,16 @@ msgstr "Sconfiggi Crelanu"
 
 #. [note]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/16_The_Mage.cfg:83
+#, fuzzy
+#| msgid ""
+#| "Ras-Tabahn is slowed and will lose four hitpoints every turn. He will die "
+#| "if he reaches zero."
 msgid ""
 "Ras-Tabahn is slowed. He will also lose four hitpoints every turn unless "
 "this amount is modified by healing."
 msgstr ""
-"Ras-Tabahn è rallentato e perderà 4 PF per turno a meno che questo non venga "
-"modificato da delle cure."
+"Ras-Tabahn è rallentato e perderà quattro PF per turno. Morirà se i suoi PF "
+"raggiungeranno lo zero."
 
 #. [note]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/16_The_Mage.cfg:86
@@ -3193,14 +3199,17 @@ msgstr "Lo vedremo."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/16_The_Mage.cfg:363
+#, fuzzy
+#| msgid ""
+#| "Ras-Tabahn is sick. He is slowed, and will lose four hitpoints every "
+#| "turn. He will die if he reaches zero."
 msgid ""
 "Ras-Tabahn is sick. He is slowed, and will lose four hitpoints every turn. "
 "He will die if he reaches zero. Villages will heal him four points, and he "
 "will lose only two if he is resting."
 msgstr ""
-"Ras-Tabahn è malato. Si muove con difficoltà, perderà 4 PF per turno e "
-"morirà se i suoi PF raggiungeranno lo zero. I villaggi lo cureranno di "
-"quattro PF e ne perderà soltanto due se si riposa."
+"Ras-Tabahn è malato. Si muove con difficoltà e perderà 4 PF per turno.  "
+"Morirà se i suoi PF raggiungeranno lo zero."
 
 #. [message]: speaker=Ardonna
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/16_The_Mage.cfg:391
@@ -3939,8 +3948,14 @@ msgstr "Fizztsars"
 
 #. [message]: speaker=Fizztsars
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg:531
+#, fuzzy
+#| msgid ""
+#| "We have arrived, Taxsstrimon. We will fight bessside you. They will pay "
+#| "for killing our malesss!"
 msgid "We have arrived, Taxsstrimon. We will fight bessside you."
-msgstr "Sssiamo arrivati, Taxssstrimon. Combatteremo al vossstro fianco."
+msgstr ""
+"Sssiamo arrivati, Taxssstrimon. Combatteremo al vossstro fianco. Pagheranno "
+"per aver uccissso i nostri maschi!"
 
 #. [message]: speaker=Taxtrimon
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg:535
@@ -4068,13 +4083,17 @@ msgstr "Taxtrimon"
 
 #. [message]: speaker=Taxtrimon
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg:832
+#, fuzzy
+#| msgid ""
+#| "We have found them! These magi destroyed a profitable business venture. "
+#| "We will take vengeance. You horse humans can assist us."
 msgid ""
 "We have found them! These magi destroyed a profitable business venture, and "
 "killed our males. We will take vengeance. You horse humans can assist us."
 msgstr ""
 "Li abbiamo trovati! Quei maghi hanno distrutto un’iniziativa mercantile dai "
-"notevoli profitti e hanno ucciso i nostri maschi. Avremo la nostra vendetta! "
-"Voi umani a cavallo potrete darci il vostro aiuto."
+"notevoli profitti. Avremo la nostra vendetta! Voi umani a cavallo potrete "
+"darci il vostro aiuto."
 
 #. [unit]: type=Merman Hoplite, id=Mauapan
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg:845
@@ -4618,6 +4637,22 @@ msgstr "Vuoto a metà"
 #~ msgstr ""
 #~ "Non gradisco l’idea di dovermi immergere nell’acqua per combattere contro "
 #~ "quegli esseri."
+
+#~ msgid ""
+#~ "I have a sssense of dark foreboding regarding the sssnowy peaksss ahead. "
+#~ "We may meet our doom if we don't have enough coinsss."
+#~ msgstr ""
+#~ "Percepisssco un ossscuro presssentimento riguardo alle cime innevate che "
+#~ "ci sssovrassstano. Potremmo incontrare il nostro dessstino se non "
+#~ "avesssssimo abbassstanza monete."
+
+#~ msgid ""
+#~ "The passes to the north are the end of many travelers. We would be wise "
+#~ "to reach them with a reserve of gold. (<i>Cough, cough</i>)"
+#~ msgstr ""
+#~ "I Valichi del nord rappresentano la fine per molti viaggiatori. Saremo "
+#~ "saggi se li raggiungeremo con un cospicua riserva d’oro (<i>colpi di "
+#~ "tosse</i>)"
 
 #~ msgid "Khalif"
 #~ msgstr "Khalif"
