--- a/po/wesnoth-multiplayer/de.po
+++ b/po/wesnoth-multiplayer/de.po
@@ -1345,7 +1345,7 @@ msgstr ""
 "Diese ungewöhnlichste aller Höhlen war einst bekannt als die Kammer der "
 "Lachenden Teufel und barg die mächtigste Zitadelle der Kah Ruuk Oni. Die Kah "
 "Ruuk waren eine verschlagene und böse Rasse von Menschen fressenden Dämonen, "
-"die die Bewohner der östlichen Land fast vierhundert Jahre lang "
+"die die Bewohner der östlichen Lande fast vierhundert Jahre lang "
 "terrorisierten, bevor sie von Antlitz Irdyas verschwanden, ohne eine Spur zu "
 "hinterlassen. Seit dieser Zeit haben viele Parteien versucht, die Höhlen von "
 "Onis in Besitz zu nehmen, um die seltsame und mysteriöse Magie ihrer "
